--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -3,5 +3,8 @@
     <h2 id="registerTitle">Registrierung</h2>
 
     <app-new-or-join *ngIf="true"></app-new-or-join>
+    <app-register-user *ngIf="true"></app-register-user>
+    <app-new-or-join *ngIf="true"></app-new-or-join>
+
     <div id="backButton"><a id="registerBackButton" routerLink="">Zurück zum Login</a></div>
-  </div>
+</div>
