--- a/src/app/register/register.component.sass
+++ b/src/app/register/register.component.sass
@@ -17,7 +17,12 @@
     margin-top: 0.5em
     padding-bottom: 2em
 
+    #currentStepContent
+        display: flex
+        justify-content: center
 
+        .stepContnet
+            width: 100%
     form
         flex-direction: column
         margin: auto
@@ -26,10 +31,6 @@
         input
             width: 96%
             margin-bottom: 1em
-        .has-danger > input
-          border: solid red
-        .has-success > input
-          border: solid green
 
         #startEndDateInput
             margin-top: 1em
