--- a/src/app/register/new-or-join/new-or-join.component.html
+++ b/src/app/register/new-or-join/new-or-join.component.html
@@ -1,5 +1,6 @@
 
-
-<button (click)="register.setJoin = true" class="button">Trete einer WG bei,</button>
-<p>oder</p>
-<button (click)="register.setJoin = false" class="button">gründe eine neue.</button>
+<div class="content">
+    <button (click)="register.setJoin = true" class="button">Trete einer WG bei,</button>
+    <p>oder</p>
+    <button (click)="register.setJoin = false" class="button">gründe eine neue.</button>
+</div>
