--- a/src/app/sass/utils/button.sass
+++ b/src/app/sass/utils/button.sass
@@ -1,23 +1,28 @@
+@import "../colors.sass"
 .button
-    display: inline-block
-    text-align: center
-    border: 0
-    padding: 0.9em
-    font-size: 16px
-    border-radius: 2px
-    background: lighten( $grey, 35%)
-    font-weight: bold
-    font-style: italic
-    transition: 0.15s linear
+  display: inline-block
+  text-align: center
+  border: 0
+  padding: 0.9em
+  font-size: 16px
+  border-radius: 2px
+  background: lighten( $grey, 35%)
+  font-weight: bold
+  font-style: italic
+  transition: 0.15s linear
 
 .button.disabled:hover
   animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both
-  transform: translate3d(0, 0, 0)
+  background-color: $errorColor
+  transform: translate3d(0, 0,0)
   perspective: 1000px
-.button:hover:not(.disabled)
+.button:hover:not(.disabled, .soft-disabled)
     background: $darkblue
     color: $white
-
+.button.soft-disabled:hover
+  animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both
+  transform: translate3d(0, 0,0)
+  perspective: 1000px
 @keyframes shake
   10%, 90%
     transform: translate3d(-1px, 0, 0)
