--- a/src/app/sass/utils/inputs.sass
+++ b/src/app/sass/utils/inputs.sass
@@ -8,6 +8,11 @@ input
     font-size: small
     padding: 0.6em 0 0.5em 0.5em
 
+.has-danger > input
+    border: solid red
+.has-success > input
+    border: solid green
+    
 input::placeholder
     color: $inputPlaceholderColor
     opacity: 1
