--- a/src/app/register/flat-register/flat-register.component.html
+++ b/src/app/register/flat-register/flat-register.component.html
@@ -22,11 +22,10 @@
       
     <div class="buttonContainer">
       <button class="button"
-          (click)="register.getPrevious">
+          (click)="register.getPrevious; register.setFlatName=flatName.value">
             Zrugg
       </button>
       <button class="button"
-              (click)="sendUserData()"
               disabled
               [ngClass]="{'soft-disabled': true}">
         Wiiter
@@ -34,7 +33,8 @@
     </div>
   
     <button class="button registerButton"
-          (click)="register.setFlatMates=flatMates; register.generateNewFlat()">
+          [ngClass]="{'disabled': flatName.invalid, 'enabled':flatName.valid}"
+          (click)="register.setFlatName=flatName.value; register.generateNewFlat()">
       Registrieren
     </button>
   </div>
