Registration Works and login almost, only thing to do is a nice auth guard

--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -24,7 +24,7 @@
         flex-direction: row
         justify-content: space-between
 
-        #rapportBlattTitel
+        #title
         text-align: center
         margin-bottom: 1em 
         @media (min-width:300px)
