--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,15 +1,19 @@
 <div id="loginPage">
   <h2 id="loginTitle">Login</h2>
   <form [formGroup]="loginForm" novalidate="novalidate" (ngSubmit)="login()">
-    <div id="email" [ngClass]="{'has-danger': email.invalid && (email.dirty || email.touched), 'has-success': email.valid && (email.dirty || email.touched) }">
-      <input formControlName="email" type="text" placeholder="Email" id="userName" name="Benutzername" pattern="^[a-zA-Z0-9.!#$%&’*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:.[a-zA-Z0-9-]+)*$" class="textInput"/>
-      <div *ngIf="email.errors && (email.dirty || email.touched) " class="form-control-feedback"><span *ngIf="password.errors.required">Geben Sie bitte ihre Email-Adresse ein.</span><span *ngIf="password.errors.pattern">Bitte geben sie eine korrekte Email-Adresse an.</span></div>
+    <div id="userName" [ngClass]="{'has-danger': userName.invalid && (userName.dirty || userName.touched), 'has-success': userName.valid && (userName.dirty || userName.touched) }">
+      <input formControlName="userName" type="text" placeholder="Benutzername" id="userName" name="Benutzername" class="textInput"/>
+      <div *ngIf="userName.errors && (userName.dirty || userName.touched) " class="form-control-feedback">
+        <span *ngIf="password.errors.required">Geben Sie bitte ihre Email-Adresse ein.</span>
+        <span *ngIf="password.errors.pattern">Bitte geben sie eine korrekte Email-Adresse an.</span></div>
     </div>
     <div id="passwordInput" [ngClass]="{'has-danger': password.invalid && (password.dirty || password.touched), 'has-success': password.valid && (password.dirty || password.touched) }">
       <input formControlName="password" type="password" placeholder="Passwort" id="password" name="Passwort" class="textInput passwordInput"/>
-      <div *ngIf="password.errors && (password.dirty || password.touched) " class="form-control-feedback"><span *ngIf="password.errors.required">Bitte geben Sie ein Passwort ein.</span><span *ngIf="password.errors.minlength">Ihr passwort muss mindestes 6 Zeichen lang sein.</span></div>
+      <div *ngIf="password.errors && (password.dirty || password.touched) " class="form-control-feedback">
+        <span *ngIf="password.errors.required">Bitte geben Sie ein Passwort ein.</span>
+        <span *ngIf="password.errors.minlength">Ihr passwort muss mindestes 6 Zeichen lang sein.</span></div>
     </div>
-    <div *ngIf="loginForm.valid &amp;&amp; loginError != '' " class="form-control-feedback"><span>Das Login ist fehlgeschlagen.</span><br/><span>Error: {{ loginError }}</span></div>
+    <div *ngIf="loginForm.valid && loginError != '' " class="form-control-feedback"><span>Das Login ist fehlgeschlagen.</span><br/><span>Error: {{ loginError }}</span></div>
     <div style="display: none" class="loadingAnim svgAnim"><img src="../../assets/svg/loader.svg"/></div>
     <div style="display: none" class="inputsChecked svgAnim"><img src="../../assets/svg/check.svg"/></div>
     <button id="login" [ngClass]="{'disabled': loginForm.invalid}" type="submit" class="button">Login</button>
