--- a/src/app/enter-code/enter-code.component.html
+++ b/src/app/enter-code/enter-code.component.html
@@ -23,7 +23,7 @@
       Zrugg
     </button>
     <button class="button"
-            (click)="checkCode(flatCode.value)"
+            (click)="checkCode()"
             [ngClass]="{'disabled': flatCodeForm.invalid}">
       Wiiter
     </button>
