--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,2 +1,4 @@
+<h1>Willkomme i de {{ flatData.name }} WG {{ userData.names.firstName }} {{ userData.names.lastName }}</h1>
+
 <pre>{{ userData | json }}</pre>
 <pre>{{ flatData | json }}</pre>
