--- a/src/app/new-or-join/new-or-join.component.sass
+++ b/src/app/new-or-join/new-or-join.component.sass
@@ -1,5 +1,5 @@
-@import "../../sass/colors.sass"
-@import "../../sass/utils/button.sass"
+@import "../sass/colors.sass"
+@import "../sass/utils/button.sass"
 
 .content
     text-align: center
