--- a/src/app/enter-code/enter-code.component.sass
+++ b/src/app/enter-code/enter-code.component.sass
@@ -1,6 +1,6 @@
-@import "../../sass/colors.sass"
-@import "../../sass/utils/button.sass"
-@import "../../sass/utils/inputs.sass"
+@import "../sass/colors.sass"
+@import "../sass/utils/button.sass"
+@import "../sass/utils/inputs.sass"
 
 .content
     display: flex
