commmit just to work in the project on the laptop

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,9 @@
 <h1>Willkomme i de {{ flatData.name }} WG {{ userData.names.firstName }} {{ userData.names.lastName }}</h1>
 
+<app-add-receipt-item></app-add-receipt-item>
+<br>
+<br>
+<br>
+<br>
 <pre>{{ userData | json }}</pre>
 <pre>{{ flatData | json }}</pre>
