--- a/src/app/add-receipt-item/add-receipt-item.component.sass
+++ b/src/app/add-receipt-item/add-receipt-item.component.sass
@@ -1,8 +1,38 @@
+//utilities
+@import "../sass/colors.sass"
+@import "../sass/utils/button.sass"
+@import "../sass/utils/inputs.sass"
+
 #addReceipt
     display: flex
     flex-direction: column
+
+    box-shadow: rgba(0, 0, 0, 0.3) 0 0.2em 1em
+    max-width: 22em
+    width: 90%
+
+    margin-left: auto
+    margin-right: auto
+
+
+    padding-top: 0.5em
+    margin-top: 0.5em
+    padding-bottom: 2em
+
+    border-radius: 7px
     
-    label
-        width: 20em
-        display: flex
-        justify-content: space-between
+    h1
+        margin: 1em
+    form
+        margin: 1em
+        label
+            width: 20em
+            display: flex
+            flex-direction: column
+            justify-content: space-between
+        button
+            width: 80%
+            display: block
+            margin-top: 1em
+            margin-right: auto
+            margin-left: auto
